fixed center align of hero paragraph

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -28,8 +28,6 @@
   margin-top: 8px;
   color: #fff;
   font-size: 20px;
-  max-width: 70vw;
-  text-align: center;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
